--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -1,4 +1,4 @@
-home.title: '"Tu imagen, tu poder interior para atreverte a revelar tu valor y dejar de sentirte invisible”'
+home.title: '« Tu imagen, tu poder interior para atreverte a revelar tu valor y dejar de sentirte invisible »'
 home.video: __home.video
 home.presentaion.head.title: '¿Te sientes invisible?<br><br>Hay una luz dentro de ti, lista para brillar.'
 home.presentation.head.text: '¿Eres una mujer que a menudo se siente <strong>ignorada,</strong> temerosa de ser <strong>juzgada</strong> por los demás? ¿Tu verdadera identidad esta <strong>escondida</strong> tras un exterior serio, sin <strong>atreverte</strong> a mostrar quién eres realmente? Esta situación te está pesando y te impide <strong>disfrutar</strong> plenamente de tu vida. ¡Es hora de cambiarla!'
@@ -11,14 +11,14 @@ navbar.language: Español
 navbar.coachingOfImage: 'Coaching de imagen'
 navbar.workshop: Talleres
 navbar.contact: Contacto
-contact.contactMe: Contáctame
+contact.contactMe: "Contacta conmigo"
 contact.service.form.type: 'Mi solicitud se refiere a :'
-contact.service.form.client: 'soy :'
+contact.service.form.client: 'Soy :'
 contact.form.firstName: Nombre
 contact.form.lastName: Apellidos
 contact.form.Email: 'Correo electrónico'
 contact.form.phoneNumber: Teléfono
-contact.service.form.message: 'Su mensaje'
+contact.service.form.message: 'Mensaje'
 contact.workshop.validation: 'Gracias por su mensaje.<br><br>Si no ha recibido respuesta en dos o tres días, es posible que el mensaje haya llegado como Spam o “correo no deseado” o, si utiliza Gmail, mire en la pestaña Notificaciones.'
 contact.workshop.title: 'Deseo inscribirme en un taller de Fabimage o en un masterclass en línea'
 contact.workshop.undertitle: 'Los talleres tienen lugar en : P. Süda 13, centro de la ciudad de Tallin.<br><br>Las clases magistrales en línea tienen lugar en Zoom. El enlace para participar se enviará a tu dirección de correo electrónico el día antes del taller.'
@@ -34,7 +34,7 @@ coachingImage.rightColumn.h2: '¿Cómo funciona el coaching de imagen?'
 coachingImage.rightColumn.p.1: 'Estoy convencida de que cada persona tiene un <strong>tesoro de bondad</strong> en su interior: un <strong>potencial</strong> capaz de conducirle hacia lo que mejor puede colmarle y hacerle feliz.<br>Fabimage ha nacido para ayudarte a encontrar ese potencial interior y ponerlo al servicio de tus objetivos.<br><br>Este descubrimiento se realiza a través de un proceso de coaching basado en <strong>las tres dimensiones de la imagen:</strong> imagen interna, cuerpo y apariencia.<br><br>El coaching de imagen - <a href="https://www.domingodelgado.com">método Domingo Delgado©</a> que te propongo es un <strong>método de autoconocimiento</strong> donde se trabaja con <strong>la persona</strong> (su identidad, su interioridad, su cuerpo) y <strong>la representación de la persona</strong> (su aspecto físico y visual).<br>Conectamos todas estas dimensiones para aprender a:<br><strong>-Aceptarte</strong> a tí mismo física e internamente<br><strong>-Cuidarte</strong> bien física e internamente<br><strong>-Amarte</strong> a tí mismo tal y como eres'
 coachingImage.leftColumn.p.1: '<strong>¿A QUIÉN VA DIRIGIDO EL COACHING DE IMAGEN?</strong><br><u>El coaching de imagen es para ti si:</u><br><br>-quieres <strong>conocerte mejor</strong> a ti mismo<br>-te gustaría <strong>aceptar y amar</strong> todo lo que conoces de ti: tanto <strong>tus sombras</strong> como <strong>tus luces</strong><br>-está dispuesto a <strong>invertir unas semanas</strong> en un trabajo sobre ti mismo y también sobre tu vestuario (si es necesario).<br>-te sientes llamado a ir más allá en la <strong>percepción estética</strong> de tu imagen<br>-buscas desarrollar un <strong>estilo auténtico,</strong> 100% acorde con lo que eres.<br><br><u>El coaching de imagen <strong>no</strong> es para ti si:</u><br><br>-quieres resultados rápidos<br>-buscas consejos / asesoramiento de estilo<br>-piensas que ya te conoces lo suficiente y/o no estas dispuesto a examinarte a ti mismo<br>-la dimensión corporal de tu imagen te da igual.'
 coachingImage.button.requestQuote: Servicios
-fabienne.title.p: 'Coach de imagen<br><br>Creadora de bienestar a través de la imagen<br><br><strong>De la sombra a la luz: tu viaje hacia la visibilidad y la confianza comienza con Fabienne</strong>'
+fabienne.title.p: 'Creadora de bienestar a través de la imagen<br><br><strong>De la sombra a la luz: tu viaje hacia la visibilidad y la confianza comienza con Fabienne</strong>'
 fabienne.leftColumn.p.1: '¿Te sientes a menudo invisible? ¿Te da miedo mostrarte? ¿Te aburre tu armario y no sabes qué ponerte? Comprendo esta sensación, porque yo también he pasado por ella.<br><br> Soy Fabienne Chmara, francesa que reside en Tallin, Estonia. <strong>Bienvenida a mi mundo, donde imagen, autoconciencia y bienestar se dan la mano.</strong><br><br> De pequeña era tímida y reservada. Me encantaba dibujar, contar cuentos y crear cosas con las manos. Mi madre solía cosernos la ropa, transformando las telas en conjuntos que reflejaban nuestras formas de ser. <strong>Estaba rodeada de belleza y creatividad.</strong><br><br> A pesar de esta <strong>atracción por la belleza,</strong> opté por estudiar Economía y gestión hotelera, lo que me llevó a desarrollar una carrera en ámbitos como la contabilidad en la Embajada de Francia en Tallin y la gestión de servicios en una residencia de estudiantes. Esta trayectoria profesional me ayudó a desarrollar <strong>talentos que estaban muy lejos de mis sueños infantiles</strong>, como la precisión, el análisis, la reflexión y, sobre todo, la capacidad de organización.<br><br> Mi verdadera inmersión en el mundo de la imagen llegó mucho más tarde, comenzando con un curso de consultoría de imagen en <strong>2018 en París,</strong> seguido de coaching y psicología aplicada a la imagen en <strong>2022 en Madrid.</strong><br><br> El camino hacia el mundo empresarial no fue fácil. Me paralizaba <strong>el miedo a mostrarme, a lo desconocido y al cambio.</strong>'
 fabienne.Idiscover: '¡ Descubro !'
 fabienne.AFIPP: 'AFIPP - <a href="https://www.afipp.org/" target=\"_blank\">Association Francophone pour l''Image et la Posture Professionnelle</a>'
@@ -88,7 +88,7 @@ service.index.myOffer: 'Mis ofertas'
 service.index.admin.newService: 'crear un nuevo servicio'
 workshop.index.body.title: Talleres
 workshop.index.admin.newWorkshop: 'crear un nuevo taller'
-navbar.fabienne: 'Sobre mi'
+navbar.fabienne: 'Fabienne'
 navbar.services: Servicios
 navbar.book: Ebooks
 book.buy: Compro
@@ -140,14 +140,14 @@ home.head.metaDescription: 'Tener un estilo auténtico y "a mi medida" es el sue
 book.index.error: 'Su pago no se pudo realizar'
 commentaryHome.new: 'Créer un nouveau commmentaire'
 commentaryHome.edit: 'Editar comentario'
-home.textVideo: '«En mi concepción del coaching de imagen no existe un estándar de belleza, la verdadera y única belleza es la tuya. ¡Hay una luz dentro de ti, esperando brillar!»<br><br>¡Conozcámonos! Mira mi vídeo, te cuento cómo un coaching de imagen te puede ayudar y cómo funciona.'
+home.textVideo: '¡Conozcámonos! Mira mi vídeo, te cuento cómo un coaching de imagen te puede ayudar y cómo funciona.'
 home.CommmentaryIntroduction: 'Lo que dicen mis clientes<br><br><strong>Descubre cómo mis clientes recuperaron la confianza, conquistaron la visibilidad y revelaron su verdadero valor</strong>'
 coachingImage.rightColumn.img.alt: __coachingImage.rightColumn.img.alt
 coachingImage.button.services: Servicios
 company.button.quote: Contactar
 workshop.index.body.title.masterClass: 'Masterclass en línea'
 workshop.index.p.2: 'Las clases magistrales online se desarrollan en el entorno Zoom y tienen una duración de 60 minutos (45 min + 15 min para preguntas).<br><br><strong>Las clases magistrales son prácticas..</strong> ¡Te presento el mundo de los colores, comparto consejos de estilo y ayudo a crear el guardarropa de tus sueños! Hablo con más detalle sobre los diferentes estilos, la elegancia, la importancia de la apariencia en la creación de una imagen y el uso responsable de la moda.<br><br>Cada mujer es hermosa y única, ¡es importante aceptarnos tal como somos!<br><br>Las clases magistrales se llevan a cabo con al menos 5 participantes:<br>¿Tienes 4 amigas? <strong>¡Organizo una clase para vosotras!</strong> ¡Escribeme para concertar la fecha!'
-workshop.interested: 'Esto me interesa'
+workshop.interested: 'Me interesa'
 footer.home: Home
 footer.contact: Contacto
 footer.service: Servicios
