--- a/translations/messages+intl-icu.et.yaml
+++ b/translations/messages+intl-icu.et.yaml
@@ -1,4 +1,4 @@
-home.title: "\"Sinu imago\_: sisemine jõud, et tunnistada oma väärtust ja lõpetada enda nähtamatuna tundmine&quot;."
+home.title: "« Sinu imago\_: sisemine jõud, et tunnistada oma väärtust ja lõpetada enda nähtamatuna tundmine »"
 home.video: 'Video pilditreener Fabienne Shmara'
 home.presentaion.head.title: 'Kas tunned end nähtamatuna?<br><br> Sinu sees on valgus, mis on valmis särama.'
 home.presentation.head.text: 'Kas oled naine, kes tunneb end sageli ignoreerituna ja <strong>kardab</strong> teiste hinnangut? Kas sa peidad oma tõelist identiteeti tõsise väljanägemise taha, <strong>julgemata</strong> näidata, kes sa tegelikult oled? See olukord koormab sind ja takistab sul oma elu täiel määral <strong>nautida</strong>. On aeg seda muuta!'
@@ -11,13 +11,13 @@ navbar.language: Eesti
 navbar.coachingOfImage: 'Imago coaching'
 navbar.workshop: Õpitoad
 navbar.contact: Kontakt
-contact.contactMe: 'võta minuga ühendust'
+contact.contactMe: 'Võta minuga ühendust'
 contact.service.form.type: 'Minu taotlus puudutab :'
 contact.service.form.client: 'Ma olen :'
 contact.form.firstName: Eesnimi
 contact.form.lastName: Perekonnanimi
 contact.form.phoneNumber: Telefon
-contact.service.form.message: 'Palun kirjutage siia oma sõnum'
+contact.service.form.message: 'Sõnum'
 contact.workshop.validation: 'Tänan kirjutamast!<br><br>Kui te ei ole saanud vastust 2-3 päeva jooksul, siis võis see minna rämpsposti või kui kasutate<br>Gmaili, Notifications vahekaardile.<br>Võite olla kindel, et teie andmeid hoitakse turvaliselt ja need jäävad meie vahele.'
 contact.workshop.title: 'Registreerin Fabimage õpituppa/online meistriklassi<br>Tulevased õpitoad / meistriklassid:'
 contact.workshop.undertitle: 'Õpitoad toimuvad aadressil: P. Süda 13, Tallinna kesklinnas.<br><br>Online meistriklassid toimuvad Zoomi keskkonnas. Lingi osalemiseks saab iga registreerunu päev enne toimumist oma e-posti aadressile.'
@@ -84,9 +84,9 @@ company.bottom-section.list.sevenStyle: 'seitse universaalset stiili'
 company.bottom-section.list.treeOfLife: 'imago elupuu (töö oma isikliku imago kujunemise alal)'
 company.bottom-section.endText: "Küsige hinnapakkumist, see ei kohustusta teid millekski!<br><br><i>*Nendes töötubades osalejad saavad 10% allahindlust kõigist teistest Fabimage'i teenustest.</i>"
 navbar.company: Ettevõtted
-navbar.fabienne: Minust
+navbar.fabienne: Fabienne
 navbar.services: Teenused
-service.index.body.title: 'Elige tu camino: servicios personalizados para transformar tu invisibilidad en luz'
+service.index.body.title: 'Vali oma tee: isikupärastatud teenused, et muuta oma nähtamatus valguseks'
 service.index.myOffer: 'Minu teenused'
 service.index.admin.newService: 'luua uus teenus'
 workshop.index.body.title: Õpitoad
@@ -143,7 +143,7 @@ home.head.metaDescription: 'Autentne stiil on paljudele meist unistuseks. Ja see
 book.index.error: 'Teie makset ei saanud sooritada'
 commentaryHome.new: 'Loo uus kommentaar'
 commentaryHome.edit: 'Muuda kommentaari'
-home.textVideo: '« Minu arusaamises imago coachingust ei ole ilu standardit, tõeline ja ainus ilu on sinu. Sinu sees on valgus, mis lihtsalt ootab, et särada ! »<br><br>Saame tuttavaks! Vaata minu videot ja saad teada kuidas imago coaching käib ja kuidas see võib sind aidata.'
+home.textVideo: 'Saame tuttavaks! Vaata minu videot ja saad teada kuidas imago coaching käib ja kuidas see võib sind aidata.'
 home.CommmentaryIntroduction: 'Minu kliendid jagavad oma kogemusi<br><br><strong>Avasta, kuidas minu kliendid taastasid enesekindluse ja nähtavuse ning avaldasid oma tõelise väärtuse</strong>'
 company.button.quote: Kontakt
 workshop.index.body.title.masterClass: Meistriklassid
@@ -193,7 +193,7 @@ home.middle-text.p3: '<strong>Sa oled ainulaadne, nii ka sinu teekond</strong><b
 home.middle-text.p4: 'Uuri, mida ma saan teha sinu heaolu ja stiili heaks!'
 button.i-reserve-my-session: 'Broneerin oma tasuta online seansi'
 button.i-discover: Uurin
-fabienne.rightColumn.p.1: 'Üha keerulisemaks muutuvad tööalased suhted ja kasvav tüdimustunne ajendasid mind otsima lahendust.<br><br> Murdepunkt tabas mind 2022. aastal, kui ma läbisin isikliku ja erialase arengu kursuse. Kursuse lõpus <strong>tühjendasin 80% oma garderoobist,</strong> mõistes, et see peegeldab Fabienne&#39;i, kes oli tõsine, kaine ja mitte väga avatud muutustele. See arusaam vabastas mind. Mõistsin, et <strong>minu riietusvalikuid dikteeris hirm, et mind ei tunnustata.</strong><br><br> See avastus võimaldas mul kinnistada <strong>imago tähtsust meie sisemise heaolu jaoks.</strong><br> Kui ma sain aru, kui palju <strong>mu riietusvalikud peegeldasid mudelit, mis ei sobinud minuga,</strong> hakkasin välja tulema oma tagasihoidlikkusest ja enesepiiratusest. <strong>Oma garderoobi sorteerimine</strong> tähistas eneseavastuse teekonna algust ja <strong>ettevõtlusega alustades</strong> algas häbist vabanemise protsess.<br><br> Imago on saanud kireks, mis on mind sisemiselt muutnud.<br><br> Täna aitan naistel, kes tunnevad end nähtamatuna, <strong>vabaneda oma hirmudest <strong>ja tunda uhkust selle üle, kes nad on.</strong> Isikliku coachingu kaudu aitan neil <strong>suurendada enesekindlust ja tuua esile oma ainulaadne stiil.</strong>'
+fabienne.rightColumn.p.1: 'Üha keerulisemaks muutuvad tööalased suhted ja kasvav tüdimustunne ajendasid mind otsima lahendust.<br><br> Murdepunkt tabas mind 2022. aastal, kui ma läbisin isikliku ja erialase arengu kursuse. Kursuse lõpus <strong>tühjendasin 80% oma garderoobist,</strong> mõistes, et see peegeldab Fabienne&#39;i, kes oli tõsine, kaine ja mitte väga avatud muutustele. See arusaam vabastas mind. Mõistsin, et <strong>minu riietusvalikuid dikteeris hirm, et mind ei tunnustata.</strong><br><br> See avastus võimaldas mul kinnistada <strong>imago tähtsust meie sisemise heaolu jaoks.</strong><br> Kui ma sain aru, kui palju <strong>mu riietusvalikud peegeldasid mudelit, mis ei sobinud minuga,</strong> hakkasin välja tulema oma tagasihoidlikkusest ja enesepiiratusest. <strong>Oma garderoobi sorteerimine</strong> tähistas eneseavastuse teekonna algust ja <strong>ettevõtlusega alustades</strong> algas häbist vabanemise protsess.<br><br> Imago on saanud kireks, mis on mind sisemiselt muutnud.<br><br> Täna aitan naistel, kes tunnevad end nähtamatuna, <strong>vabaneda oma hirmudest </strong>ja tunda uhkust selle üle, kes nad on.</strong> Isikliku coachingu kaudu aitan neil <strong>suurendada enesekindlust ja tuua esile oma ainulaadne stiil.</strong>'
 fabienne.leftColumn.p.2: 'Ma olen üksikettevõtja, see on seiklus, mis võib olla nii vaimustav kui ka hirmutav. Ettevõtlus seab asjad kahtluse alla, äratab hirmud ja minu puhul ka <strong>häbi!</strong><br><br> FABIMAGE on olnud mulle <strong>hüppelauaks,</strong> et võtta vastu väljakutseid, millel on palju rohkem pistmist minu isikliku arenguga kui turundustehnikate õppimisega! <strong>2020.</strong> aastal käivitatud FABIMAGE leidis oma identiteedi alles <strong>2023.</strong> aastal.<br><br> <strong>Minu missioon</strong> on nüüdsest alates toetada sind hellalt ja austavalt, et :'
 fabienne.p.end: '<strong>Iga naine on ainulaadne</strong> ja on aeg, et maailm näeks sinu erilist valgust. Koos avame selle sisemise šampanjapudeli ja laseme <strong>sinu ilu, enesekindluse ja vabaduse nektaril</strong> voolata.<br><br> Alusta oma teekonda sisemise vabaduse ja oma tõelise mina väljendamise suunas, broneerides tasuta 30-minutilise avastamissessiooni.'
 fabienne.leftColumn.h5.1: '<strong>Lugu talendi jahtimisest, valgusest ja varjust</strong>'
